Add Scala regressions tests for CatBoostClassifier and CatBoostRegressor. MLTOOLS-1517.
ref:4435f58f9c267d466d65f3d1e04b70d74c007bd1